--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@ services:
   jenkins:
     image: jenkins/jenkins:lts
     volumes:
-        - jenkins-volume:/var/jenkins_home
+      - jenkins-volume:/var/jenkins_home
     ports:
       - "8080:8080"
   nexus:
     image: sonatype/nexus3
     volumes:
-        - nexus-data:/nexus-data
+      - nexus-data:/nexus-data
     ports:
-        - "8081:8081"
+      - "8081:8081"
 
 volumes:
     jenkins-volume:
-        external: true
+      driver: local
     nexus-data:
-        external: true
+      driver: local
