--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "8081:8081"
 
 volumes:
-    jenkins-volume:
+    jenkins_data:
       driver: local
-    nexus-data:
+    nexus_data:
       driver: local
