--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   jenkins:
     image: jenkins/jenkins:lts
     volumes:
-      - jenkins-volume:/var/jenkins_home
+      - jenkins_data:/var/jenkins_home
     ports:
       - "8080:8080"
   nexus:
